# docs/swagger.json
@@ -235,8 +235,29 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "Delete contact by id"
+          "200": {
+            "description": "Delete contact by id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "data": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/contact"
+                    }
+                  }
+                }
+              }
+            }
           },
           "400": {
             "$ref": "#/components/responses/400"
@@ -716,7 +737,7 @@
         "description": "User logout",
         "security": [],
         "responses": {
-          "204": {
+          "200": {
             "description": "User logout",
             "content": {
               "application/json": {
@@ -728,7 +749,7 @@
                   "properties": {
                     "status": {
                       "type": "integer",
-                      "example": 204
+                      "example": 200
                     }
                   }
                 }
