# src/controllers/auth.js
@@ -50,7 +50,7 @@ export const logoutUserController = async (req, res) => {
   res.clearCookie('sessionId');
   res.clearCookie('refreshToken');
 
-  res.status(204).send();
+  res.status(200).json({status: 200});
 };
 
 const setupSession = (res, session) => {
